# atp-c-

./: .gitignore  CMakeLists.txt  README.md  compile_deploy.sh  main.cpp
cpp/: CMakeLists.txt
cpp/include/: atp_cplusplus
cpp/include/atp_cplusplus_parts/: TMC2209.hpp  VEML6075.hpp
cpp/src/: TMC2209.cpp  VEML6075.cpp
cpp/tests/: CMakeLists.txt
cpp/tests/src/: test.cpp  test_TMC2209.cpp
python/: atp_cplusplus.cpp  tmc2209.cpp  veml6075.cpp
